--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     </header>
     <h1>homepage</h1>
     <main>
-      <section class="container">
-        <div class="block"></div>
-        <div class="block"></div>
-        <div class="block"></div>
-      </section>
+          <div class="box"></div>
+          <div class="box-1">
+           <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, maiores quaerat! Veritatis quos fuga adipisci? Perspiciatis illo nam pariatur alias recusandae est architecto nobis sed id quas eum.</p>
+          </div>
+          <div class="box-2">
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, maiores quaerat! Veritatis quos fuga adipisci? Perspiciatis illo nam pariatur alias recusandae est aspernatur expedita ad, repudiandae odio, laboriosam enim? Ducimus dolorem harum nihil cupiditate animi alias rem quibusdam perferendis illum? Aperiam minima magnam necessitatibus architecto nobis sed id quas eum.</p>
+          </div>
     </main>
     <footer></footer>
   </body>
